--- a/LinkerPlayer/LinkerPlayer.csproj
+++ b/LinkerPlayer/LinkerPlayer.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<OutputType>WinExe</OutputType>
@@ -7,6 +7,15 @@
 		<UseWPF>true</UseWPF>
 		<AllowUnsafeBlocks>True</AllowUnsafeBlocks>
 		<PlatformTarget>x64</PlatformTarget>
+		<!-- Code style enforcement -->
+		<EnableNETAnalyzers>true</EnableNETAnalyzers>
+		<AnalysisLevel>latest</AnalysisLevel>
+		<EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
+		<GenerateDocumentationFile>false</GenerateDocumentationFile>
+		<Deterministic>true</Deterministic>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<UsingRemove>true</UsingRemove>
+		<UsingSort>true</UsingSort>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -35,7 +44,7 @@
 		<PackageReference Include="TagLibSharp" Version="2.3.0" />	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\LinkerPlayer.BassLibs\LinkerPlayer.BassLibs.csproj" />
+	 <ProjectReference Include="..\LinkerPlayer.BassLibs\LinkerPlayer.BassLibs.csproj" />
 	</ItemGroup>
 
 
@@ -66,7 +75,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Diagnostics\" />
+	 <Folder Include="Diagnostics\" />
 	</ItemGroup>
 
 </Project>
