Did some major refactoring and simplfying the PlaylistTabs area.

--- a/.editorconfig
+++ b/.editorconfig
@@ -39,8 +39,10 @@ dotnet_separate_import_directive_groups = false
 dotnet_diagnostic.IDE0055.severity = warning
 
 # Wrap and newline preferences
-csharp_preserve_single_line_blocks = false
+csharp_preserve_single_line_blocks = true
 csharp_preserve_single_line_statements = false
+
+csharp_prefer_braces = true
 
 # Prefer file-scoped namespaces
 csharp_style_namespace_declarations = file_scoped:warning
